Conserta menu de navegação

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#nav">&#9776;</a>
             <a id="close" href="#close">&#9776;</a>
             <div>  
-                <a href="/">Sobre</a>
+                <a href="index.html">Sobre</a>
                 <a href="projects.html">Projetos</a>
                 <a target="_blank" href="https://www.linkedin.com/in/jo%C3%A3o-victor-soares-faust-2a87a4251/">
                     <i class="fa-brands fa-linkedin"></i>
